--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,8 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".DemoActivity"
+        <!--HomeActivity-->
+        <activity android:name=".HomeActivity"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -16,10 +17,15 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".HomeActivity"
-            android:screenOrientation="portrait">
-
-        </activity>
+        <!--QuestionActivity-->
+        <activity android:name=".QuestionActivity"
+            android:screenOrientation="portrait" />
+        <!--LeaderboardActivity-->
+        <activity android:name=".LeaderboardActivity"
+            android:screenOrientation="portrait" />
+        <!--SpinActivity-->
+        <activity android:name=".SpinActivity"
+            android:screenOrientation="portrait" />
     </application>
 
 </manifest>
