--- a/.gitignore
+++ b/.gitignore
@@ -39,6 +39,8 @@ captures/
 # Keystore files
 *.jks
 *.name
+
+.idea/
 .idea/compiler.xml
 .idea/copyright/profiles_settings.xml
 .idea/encodings.xml
