Connected app to Firebase. Added Google login.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <!--SignInActivity-->
+        <activity android:name=".SignInActivity"
+            android:screenOrientation="portrait" />
         <!--QuestionActivity-->
         <activity android:name=".QuestionActivity"
             android:screenOrientation="portrait" />
