--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,8 +8,10 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <!--HomeActivity-->
-        <activity android:name=".HomeActivity"
+
+        <!-- HomeActivity -->
+        <activity
+            android:name=".HomeActivity"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -17,18 +19,31 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <!--SignInActivity-->
-        <activity android:name=".SignInActivity"
+        <!-- SignInActivity -->
+        <activity
+            android:name=".SignInActivity"
             android:screenOrientation="portrait" />
-        <!--QuestionActivity-->
-        <activity android:name=".QuestionActivity"
+        <!-- QuestionActivity -->
+        <activity
+            android:name=".QuestionActivity"
             android:screenOrientation="portrait" />
-        <!--LeaderboardActivity-->
-        <activity android:name=".LeaderboardActivity"
+        <!-- LeaderboardActivity -->
+        <activity
+            android:name=".LeaderboardActivity"
             android:screenOrientation="portrait" />
-        <!--SpinActivity-->
-        <activity android:name=".SpinActivity"
+        <!-- SpinActivity -->
+        <activity
+            android:name=".SpinActivity"
             android:screenOrientation="portrait" />
+
+        <service
+            android:name=".services.MyFirebaseMessagingService"
+            android:enabled="true"
+            android:exported="false" />
+        <service
+            android:name=".services.MyFirebaseInstanceIdService"
+            android:enabled="true"
+            android:exported="false"></service>
     </application>
 
 </manifest>
